--- a/css/screen.css
+++ b/css/screen.css
@@ -981,9 +981,10 @@ body:not(.post-template) .post-title {
 
 .post-meta {
     display: block;
-    margin: 1.75rem 0 0 0;
+    margin: 1.75rem 0 2rem 0;
     font-family: "Open Sans", sans-serif;
-    font-size: 1.5rem;
+    text-transform: uppercase;
+    font-size: 1.3rem;
     line-height: 2.2rem;
     color: #9EABB3;
 }
@@ -1016,8 +1017,6 @@ body:not(.post-template) .post-title {
     margin-left: 8px;
     padding-left: 12px;
     border-left: #d5dbde 1px solid;
-    text-transform: uppercase;
-    font-size: 1.3rem;
     white-space: nowrap;
 }
 
@@ -1121,8 +1120,8 @@ body:not(.post-template) .post-title {
 /* The author credit area after the post */
 .post-footer {
     position: relative;
-    margin: 6rem 0 0 0;
-    padding: 6rem 0 0 0;
+    margin: 3rem 0 0 0;
+    padding: 3rem 0 0 0;
     text-align: center;
 }
 
@@ -1776,10 +1775,11 @@ body:not(.post-template) .post-title {
     .post-meta {
         font-size: 1.3rem;
         margin-top: 1rem;
+        margin-bottom: 1rem;
     }
 
     .post-footer {
-        padding: 1rem 0 3rem 0;
+        padding: 0 0 3rem 0;
         text-align: center;
     }
 
